2003-02-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am:
	Fix tinderbox bustage introduced by my previous commit.

2003-02-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am:
	* help-converters/gnome-vfs-module/help-methods.conf:
	* help-converters/gnome-vfs-module/help-methods.conf.in:
	be sure to generate help-methods.conf based on libexecdir value 
	(bug #91169)

2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

Thu Jan 30 22:28:43 2003  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_interface.schemas.in: change default GTK+ theme.

2003-01-23  Alexander Larsson  <alexl@redhat.com>

	* libgnome/Makefile.am (libgnome_2_la_LDFLAGS): 
	Correct version number error.
	
	* configure.in:
	Add EXTRAVERSION and set to .1
	Add missing translations to ALL_LINGUAS.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Fix libtool versioning. Up number to 2.2.0

Fri Jan 17 15:25:39 2003  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_peripherals_mouse.schemas.in: add
	/desktop/gnome/peripherals/mouse/cursor_theme and
	/desktop/gnome/peripherals/mouse/cursor_size

2003-01-14  Anders Carlsson  <andersca@gnu.org>

	* monikers/bonobo-config-bag.c (bonobo_config_bag_new): Fix comment.

2003-01-09  Alexander Larsson  <alexl@redhat.com>

	* schemas/Makefile.am (schema_in_files): 
	* schemas/desktop_gnome_thumbnailers.schemas.in:
	Add schemas for thumbnailers.

2003-01-08  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.90

2003-01-08  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas.in : set
	  defaults to 0 to fix #96483

2002-12-24 John Fleck <jfleck@inkstain.net>

	* help-converters/info/main.c