@@ -37,7 +37,7 @@ dnl
 dnl Due to the sed scripts being split on 90 line
 dnl blocks, this macro needs to be right at the beginning.
 dnl
-AC_PROG_INTLTOOL
+AC_PROG_INTLTOOL([0.21])
 
 AC_ISC_POSIX
 AC_PROG_CC
